--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,9 +16,29 @@ li {
   list-style: none;
 }
 
+/* ログイン */
+.w-25 {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.logo {
+  position: absolute;
+  top: 170px;
+}
+
+.atlas {
+  max-width: 153px;
+}
+
+/* 新規登録 */
+.sex {
+  margin-left: 2px;
+}
+
 /* サイドバー */
 .sidebar {
-  width: 150px;
+  width: 180px;
   height: 100vh;
   background-color: #03AAD2;
   font-weight: bold;
@@ -30,6 +50,42 @@ li {
 
 .sidebar p a {
   color: #FFF;
+}
+
+.top {
+  background-image: url('/image/190_b_24.png');
+  max-width: 20px;
+  filter: invert(1);
+}
+
+.logout {
+  max-width: 20px;
+  filter: invert(1);
+}
+
+.reserve {
+  max-width: 20px;
+  filter: invert(1);
+}
+
+.check {
+  max-width: 20px;
+  filter: invert(1);
+}
+
+.check-list {
+  max-width: 20px;
+  filter: invert(1);
+}
+
+.tl {
+  max-width: 20px;
+  filter: invert(1);
+}
+
+.user-serch {
+  max-width: 20px;
+  filter: invert(1);
 }
 
 /* トップページ */
@@ -78,6 +134,10 @@ li {
 
 .adjust-table-btn {
   width: 70%;
+}
+
+.calendar-td {
+  border: 1px solid #dee2e6;
 }
 
 /* モーダル */
@@ -150,6 +210,28 @@ li {
   color: red;
 }
 
+/* 投稿 */
+.tweet {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0px;
+  background-color: #09a9d2;
+  border-color: #09a9d2;
+  color: #fff;
+  border-radius: 13px;
+  margin-bottom: 20px;
+  margin-top: 48px;
+}
+
+.search {
+  background-color: #09a9d2;
+  border-color: #09a9d2;
+  border: none;
+  color: #FFF;
+  border-radius: 5px;
+  width: 40px;
+}
+
 /* 掲示板 詳細画面 */
 .contributor {
   font-size: 12px;
@@ -159,6 +241,8 @@ li {
 
 .detsail_post_title {
   font-size: 14px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .detsail_post {
@@ -166,10 +250,10 @@ li {
   color: #9E9E9E;
 }
 
-.detail_inner_head {
+/* .detail_inner_head {
   display: flex;
   justify-content: space-between;
-}
+} */
 
 .edit-modal-open {
   cursor: pointer;
@@ -225,16 +309,37 @@ li {
 .category_btn {
   font-size: 12px;
   border-radius: 5px;
-  padding: 0 5px;
+  padding: 10px 20px;
   border: none;
-  background: #999;
+  background: #e38eab;
   color: #FFF;
+  margin-top: 15px;
+  width: 50%;
+}
+
+.my_tl_btn {
+  font-size: 12px;
+  border-radius: 5px;
+  padding: 10px 20px;
+  border: none;
+  background: #ebbc5d;
+  color: #FFF;
+  margin-top: 15px;
+  width: 50%;
 }
 
 .main_categories span,
 .sub_categories li input {
   list-style: none;
   cursor: pointer;
+}
+
+.small-ball {
+  background-color: #09a9d2;
+  border-color: #09a9d2;
+  color: #fff;
+  border-radius: 13px;
+  padding: 0.25rem 0.75rem;
 }
 
 /* ユーザー検索 */
@@ -246,8 +351,9 @@ li {
   height: 80vh;
   overflow: scroll;
   padding: 10px;
-  background: #FFF;
+  /* background: #FFF; */
   border-radius: 5px;
+  justify-content: space-around;
 }
 
 .reserve_users_area span {
@@ -257,6 +363,9 @@ li {
 .one_person {
   width: 250px;
   height: 250px;
+  border-radius: 10px;
+  background-color: white;
+  margin-bottom: 20px;
 }
 
 .search_conditions span {
@@ -270,10 +379,106 @@ li {
 
 .subject_edit_btn {
   font-size: 12px;
-  color: #0000FF;
+  color: #89c5e3;
   cursor: pointer;
 }
 
 .subject_inner {
   display: none;
+}
+
+.free_word {
+  padding: 8px 6px;
+  width: 85%;
+  background-color: #e0e5e9;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+/* 選択科目の登録 */
+.choice {
+  margin-top: 8px;
+}
+
+.arrow-icon {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-right: 2px solid #89c5e3;
+  border-bottom: 2px solid #89c5e3;
+  transform: rotate(45deg);
+  /* ▼ */
+  transition: transform 0.3s ease;
+  margin-left: 8px;
+}
+
+/* .open が親に付いたとき、↑ に変化 */
+.subject_edit_btn.open .arrow-icon {
+  transform: rotate(-135deg);
+  /* ▲ */
+}
+
+.search-icon {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-right: 2px solid #4f6e8a;
+  border-bottom: 2px solid #4f6e8a;
+  transform: rotate(45deg);
+  /* ▼ */
+  transition: transform 0.3s ease;
+  margin-left: 8px;
+}
+
+.search_conditions.open .search-icon {
+  transform: rotate(-135deg);
+  /* ▲ */
+}
+
+/* 予約確認画面の背景色を交互にするもの */
+tr:nth-child(odd) {
+  background-color: white;
+  /* 奇数行：薄いグレー */
+}
+
+tr:nth-child(even) {
+  background-color: #e5f6fa;
+  /* 偶数行：白 */
+}
+
+/* メインカテゴリーのアコーディオンメニュー */
+.main-toggle {
+  cursor: pointer;
+  user-select: none;
+  display: inline-flex;
+  align-items: center;
+}
+
+.post-icon {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-right: 2px solid #4f6e8a;
+  border-bottom: 2px solid #4f6e8a;
+  transform: rotate(45deg);
+  /* ▼ */
+  transition: transform 0.3s ease;
+  margin-left: 8px;
+}
+
+/* 開いているとき（▲） */
+.main-toggle.active .post-icon {
+  transform: rotate(-135deg);
+}
+
+/* カレンダー */
+.day-sat .calendar-day-number {
+  color: #0000ff !important;
+  /* 土曜は青 */
+}
+
+.day-sun .calendar-day-number {
+  color: red !important;
+  /* 日曜は赤 */
 }
