--- a/public/css/style.css
+++ b/public/css/style.css
@@ -467,6 +467,7 @@ tr:nth-child(even) {
   /* ▼ */
   transition: transform 0.3s ease;
   margin-left: 8px;
+  margin-top: 10px;
 }
 
 /* 開いているとき（▲） */
